fixing z-index override

--- a/src/gridstack.css
+++ b/src/gridstack.css
@@ -29,7 +29,7 @@
   right: 10px;
   bottom: 0;
   width: auto;
-  z-index: 0 !important;
+  z-index: 0;
   overflow-x: hidden;
   overflow-y: auto;
 }
